# portfolio-dashboard-fullstack

./: LICENSE  README.md  docker-compose.yml  fix_readme.py
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_alert.py  test_twr.py
backend/scripts/: init_db.sql
backend/src/: database.py  main.py  scheduler.py
backend/src/routers/: accounts.py  alert_rules.py  assets.py  market.py  portfolio.py  positions.py  transactions.py
backend/src/schemas/: accounts.py  alert_rules.py  assets.py  portfolio.py  positions.py  transactions.py
backend/src/services/: alert_engine.py  market_data.py  notifications.py  portfolio_history.py  positions.py
frontend/: .gitignore  Dockerfile  README.md  api_client.py  app.py  pyproject.toml
frontend/pages/: 1_💰_Accounts_&_Assets.py  2_📝_Transactions.py  3_🔔_Alert_Rules.py
ios_widget/: FinanceBoardWidget.js  README.md
