[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.2",
    "cachetools>=6.2.6",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.39.0",
    "yfinance>=1.2.0",
]
